--- a/front-end/src/containers/feed/Feed.module.css
+++ b/front-end/src/containers/feed/Feed.module.css
@@ -1,5 +1,4 @@
-.All {
+.Feed {
     background-color: #eee;
     height: 1000px;
-    width: 100%;
 }
